# specforge

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  angular.json  package-lock.json  package.json  specforge.db  tsconfig.app.json  tsconfig.spec.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  release.yml  test.yml
bench/: .env.example  Cargo.toml  README.md  run-bench.mjs  run-demo.mjs  tsconfig.json
bench/cases/: create-prd.ron  exact-path.ron  final-number.ron  final-text-equals.ron  final-text-matches.ron  list-files.ron  no-write-explain.ron  plain-question-no-tools.ron  read-after-write.ron  search-vault.ron  three-docs.ron  two-files.ron  use-skill.ron
bench/harness/: build.mjs  mock-endpoint.mjs  mock-server.mjs  node-chat-provider.ts  runner.ts  tools.ts  verify.mjs
bench/src/: main.rs  specforge_agent.rs
docs/: ARCHITECTURE.md  FRONTMATTER.md  GAP-ANALYSIS.md  PM-TOOL-INTEGRATION.md  RELEASING.md  ROADMAP.md
e2e/linear/: .env.example  README.md  build.mjs  fixture.ts  run-e2e.mjs  run.ts  teardown.ts  tsconfig.json
electron/: main.ts  preload.ts  tsconfig.json
electron/db/: index.ts  migrations.ts
electron/frontmatter/: frontmatter.ts
electron/indexing/: chunker.ts  indexer.ts  link-parser.ts  link-resolver.ts
electron/ipc/: ai-error.ts  ai-history.ts  ai.ts  chats.ts  connection-secrets.ts  dialog.ts  doc-properties.ts  embeddings.ts  export.ts  gemma-tool-call-parser.ts  index.ts  linear-oauth.ts  sync.ts  (+13 more)
scripts/: build-electron.mjs
src/: index.html  styles.css
(+184 files in other folders)
